--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@charset "UFT-8"
+@charset "UFT-8";
 
 /*共通部分
 --------------------------------------------------------------------------------------*/
