--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 /*共通部分
 --------------------------------------------------------------------------------------*/
-html  {
+html {
     font-size: 100%;
 }
 body {
@@ -83,7 +83,7 @@ img {
 /*大きな背景画像*/
 .big-bg {
     background-size: cover;
-    background-position: center-top;
+    background-position: center top;
 }
 #home {
     background-image: url(../images/main-bg.jpg);
@@ -118,12 +118,14 @@ footer p {
 
 /*記事部分*/
 article {
-    width: 74%;
+    width: 60%;
+    order: 2;
 }
 
 /*サイドバー*/
 aside {
     width: 22%;
+    order: 3;
 }
 
 .news-contents {
@@ -197,6 +199,126 @@ asaid p {
 .sub-menu a:hover {
     color: #0bd;
 }
+.ad {
+    order: 1;
+}
+
+/*MENU
+----------------------------------------------------------------*/
+#menu {
+    background-image: url(../images/menu-bg.jpg);
+    min-height: 100vh;
+}
+.menu-content {
+    max-width: 560px;   
+    margin-top: 10%;
+}
+.menu-content .page-title {
+    text-align: center;
+}
+.menu-content p {
+    font-size: 1.125rem;
+    margin: 10px 0 0;
+}
+
+
+.grid {
+    display: grid;
+    gap: 26px;
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+    margin-top: 6%;
+    margin-bottom: 50px;
+}
+
+.big-box {
+    grid-column: 1 / 3;
+    grid-row: 1 / 3;
+}
+.big-box img {
+    height: 94%;
+    width: 100%;
+    object-fit: cover;
+}
+
+/*CONTACT
+--------------------------------------------------*/
+#contact {
+    background-image: url(../images/contact-bg.jpg);
+    min-height: 100vh;
+}
+
+/*フォーム*/
+form div {
+    margin-bottom: 14px;
+}
+label {
+    font-size: 1.125rem;
+    margin-bottom: 10px;
+    display: block;
+}
+input[type="text"],
+input[type="email"],
+textarea {
+    background: rgba(255, 255, 255, .5);
+    border: 1px #fff solid;
+    border-radius: 5px;
+    padding: 10px;
+    font-size: 1rem;
+}
+input[type="text"],
+input[type="email"] {
+    width: 100%;
+    max-width: 240px;
+}
+textarea {
+    width: 100%;
+    max-width: 480px;
+    height: 6rem;
+}
+input[type="submit"] {
+    border: none;
+    cursor: pointer;
+    line-height: 1;
+}
+
+/*店舗情報・地図*/
+#location {
+    padding: 4% 0;
+}
+#location .wrapper {
+    display: flex;
+    justify-content: space-between;
+}
+.location-info {
+    width: 22%;
+}
+.location-info P {
+    padding: 12px 10px;
+}
+.location-map {
+    width: 74%;
+}
+
+/*iframe*/
+iframe {
+    width: 100%;
+}
+
+/*SNS*/
+#sns {
+    background: #FAF7F0;
+    padding: 4% 0;
+}
+#sns .wrapper {
+    display: flex;
+    justify-content: space-between;
+}
+#sns .sub-title {
+    margin-bottom: 30px;
+}
+.sns-box {
+    width: 30%;
+}
 
 /*モバイル版
 --------------------------------------------------*/
@@ -232,4 +354,65 @@ asaid p {
     aside {
         width: 100%;
     }
+    #news .page-title {
+        margin-top: 30px;
+    }
+    aside {
+        margin-top: 60px;
+    }
+    .post-info {
+        margin-bottom: 30px;
+    }
+    .post-date {
+        width: 70px;
+        height: 70px;
+        font-size: 1rem;
+    }
+    .post-date span {
+        font-size: 0.875rem;
+        margin-top: 10px;
+    }
+    .post-title,
+    .post-cat {
+        margin-left: 80px;
+    }
+
+    /*MENU*/
+    .menu-content {
+        margin-top: 20%;
+    }
+    .big-box {
+        grid-column: auto;
+        grid-row: auto;
+    }
+    .big-box img {
+        height: auto;
+    }
+
+    /*CONTACT*/
+    #contact .page-title {
+        margin-top: 40px;
+    }
+
+    /*フォーム*/
+    input[type="text"],
+    input[type="email"],
+    textarea {
+        max-width: 100%;
+    }
+
+    /*店舗情報・地図/SNS*/
+    #locatiom .wrapper,
+    #sns .wrapper {
+        flex-direction: column;
+    }
+    .location-info,
+    .location-map,
+    .sns-box {
+        width: 100%;
+    }
+    .sns-box {
+        margin-bottom: 30px;
+    }
 }
+
