--- a/style.css
+++ b/style.css
@@ -243,7 +243,7 @@ asaid p {
 /*CONTACT
 --------------------------------------------------*/
 #contact {
-    background-image: url(../images/contact-bg.jpg);
+    background-image: url(https://github.com/hiro525/c/blob/main/contact-bg.jpg?raw=true);
     min-height: 100vh;
 }
 
