--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ img {
     background-position: center top;
 }
 #home {
-    background-image: url(../images/main-bg.jpg);
+    background-image: url(https://github.com/hiro525/c/blob/main/main-bg.jpg?raw=true);
     min-height: 100vh;
 }
 #home .page-title {
