--- a/style.css
+++ b/style.css
@@ -360,7 +360,7 @@ iframe {
     }
     .post-date {
         width: 70px;
-        height: 70px;
+        min-height: 70px;
         font-size: 1rem;
     }
     .post-date span {
